# lerobot_dataset_v21_tool

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README-ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aws_lambda/src/: aws_batch_launcher.py
docker/: Dockerfile  Dockerfile.aws  docker-compose.yml
docker/scripts/: ffmpeg_installer.sh  ros2_installer.sh
infra/envs/dev/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/batch/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/secrets_manager/: main.tf  outputs.tf  variables.tf
infra/modules/security_group/: main.tf  outputs.tf  variables.tf
infra/modules/sns/: main.tf  outputs.tf  variables.tf
infra/modules/vpc/: main.tf  outputs.tf  variables.tf
src/hsr_data_converter/: convert_config.py  filter_episodes.py  hsr_utils.py  merge_dataset.py  recorded_topics.py  tf_buffer.py
src/hsr_data_converter/rosbag2lerobot/: __init__.py  action_calculator.py  aws_handler.py  core_converter.py  episode_loader.py  main.py  utils.py
src/hsr_data_converter/utils/: aws_helper.py  convertV0_to_V1.py  transformations.py
src/hsr_data_converter/visualize/: lerobot_dataset.py  lerobot_dataset_html.py  utils.py
tests/: test_real_data_ros2_validation.py  test_rosbag2lerobot.py
